# termcolor-c

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: c-cpp.yml
src/: main.c  termcolor.c  termcolor.h
